--- a/front-end/src/app/forms/transactions/transactions.component.scss
+++ b/front-end/src/app/forms/transactions/transactions.component.scss
@@ -17,12 +17,38 @@
     }
     @include media(mediumDesktop) {
       display: table-cell;
-      width: 250px;
+      width: 400px;
     }
     @include media(largeDesktop) {
       display: table-cell;
-      width: 250px;
-    }
+      width: 400px;
+    }    
+    // .transactions__sidebar_categories {
+    //   @include media(tablet) {
+    //     display: none;
+    //   }
+    //   @include media(mediumDesktop) {
+    //     display: table-cell;
+    //     width: 250px;
+    //   }
+    //   @include media(largeDesktop) {
+    //     display: table-cell;
+    //     width: 250px;
+    //   }
+    // }
+    // .transactions__sidebar_filters {
+    //   @include media(tablet) {
+    //     display: none;
+    //   }
+    //   @include media(mediumDesktop) {
+    //     display: table-cell;
+    //     width: 400px;
+    //   }
+    //   @include media(largeDesktop) {
+    //     display: table-cell;
+    //     width: 400px;
+    //   }
+    // }        
   }
 
 
