--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.scss
@@ -22,7 +22,7 @@
         margin: 0 auto;
       }
       #state,
-      #electiondate {
+      #electionDate {
         margin: 0 auto !important;
         width: 200px !important;
       }
