--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -8,7 +8,13 @@
     <header>
       <div class="header-content">
         <div class="float-left">
-          <h1>Report Type:&nbsp;&nbsp;{{reportType}}&nbsp;
+          <h1>
+            <ng-container *ngIf="!reportType">
+              Report Type
+            </ng-container>
+            <ng-container *ngIf="reportType">
+              Report Type: {{reportType}}
+            </ng-container>
             <button
               type="button"
               class="btn-info"
@@ -36,25 +42,25 @@
             <ul class="options-list">
               <li
                 class="options-list__item"
-                *ngFor="let committee_form3x_reporttype of committee_form3x_reporttypes || async"
+                *ngFor="let committeeReportType of committeeReportTypes || async"
               >
               <input
                 type="radio"
                 name="reportTypeRadio"
-                [value]="committee_form3x_reporttype.report_type"
-                [checked]="committee_form3x_reporttype.report_type === reportTypeSelected"
+                [value]="committeeReportType.report_type"
+                [checked]="committeeReportType.report_type === reportTypeSelected"
                 (change)="updateTypeSelected($event)"
                 formControlName="reportTypeRadio"
               />
                 <label
-                  for="{{committee_form3x_reporttype.report_type_desciption}}"
+                  for="{{committeeReportType.report_type_desciption}}"
                 >
-                {{committee_form3x_reporttype.report_type_desciption}}
+                {{committeeReportType.report_type_desciption}}
                 </label>
                 <button
                   type="button"
                   class="btn-info"
-                  ngbTooltip=" {{committee_form3x_reporttype.report_type_info}}"
+                  ngbTooltip=" {{committeeReportType.report_type_info}}"
 
                 >
                   <i class="info-icon" aria-hidden="true"></i>
@@ -79,7 +85,6 @@
             <button
               class="btn btn-primary btn-right"
               type="submit"
-              [disabled]="(frmReportType.invalid && (frmReportType.dirty || frmReportType.touched)) || (coverageDateNotSelected)"
             >
               Next
             </button>
