--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -34,8 +34,12 @@
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12">
               <div class="text-error text-center"
-                *ngIf="(frmReportType.invalid && (frmReportType.dirty || frmReportType.touched)) ">
+                *ngIf="(frmReportType.invalid && (optionFailed)) ">
                 You must select a report type for filing.
+              </div>
+              <div class="text-error text-center"
+                *ngIf="((frmReportType.dity || frmReportType.touched) && !optionFailed && !fromDateSelected && !toDateSelected)">
+                You must select coverage dates.
               </div>
             </div>
           </div>
