--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.scss
@@ -39,7 +39,7 @@
     .card-header {
       background-color: $bombay;
       cursor: pointer;
-      .fa-chevron-up:before, .fa-chevron-down:before{
+      .up-arrow-icon:before, .down-arrow-icon:before{
         color: $white;
       } 
     }
@@ -56,7 +56,7 @@
   footer {
     background-color: $mineShaft;
     bottom: 0;
-    position: absolute;
+    position: relative;
     width: 100%;
     .form-sidebar__item {
       border-bottom: 1px solid $white;
