--- a/front-end/src/app/shared/scss/classes/_icons.scss
+++ b/front-end/src/app/shared/scss/classes/_icons.scss
@@ -109,3 +109,28 @@
   @extend .fas;
   @extend .fa-dollar-sign;
 }
+
+.trash-icon {
+  @extend .fas;
+  @extend .fa-trash;
+}
+
+.filter-icon {
+  @extend .fas;
+  @extend .fa-filter;
+}
+
+.thumbtack-icon {
+  @extend .fas;
+  @extend .fa-thumbtack;
+}
+
+.file-import-icon {
+  @extend .fas;
+  @extend .fa-file-import;
+}
+
+.table-icon {
+  @extend .fas;
+  @extend .fa-table;
+}
