--- a/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
+++ b/front-end/src/app/forms/transactions/transactions-filter-sidebar/transactions-filter-sidebar.component.html
@@ -99,7 +99,7 @@
               <input
                 type="number"
                 name="minamount"
-
+                [(ngModel)]="filterAmountMin"
                 class="form-control"
                 aria-label="Filter Min Amount"
                 aria-describedby="filter-min-amount"
@@ -115,7 +115,7 @@
               <input
                 type="number"
                 name="maxamount"
-
+                [(ngModel)]="filterAmountMax"
                 class="form-control"
                 aria-label="Filter Max Amount"
                 aria-describedby="filter-max-amount"
